--- a/curl-a-joke-ing-1.yml
+++ b/curl-a-joke-ing-1.yml
@@ -3,6 +3,10 @@ kind: Ingress
 metadata:
   name: curl-a-joke
 spec:
-  backend:
-    serviceName: curl-a-joke
-    servicePort: 8080
+  rules:
+  - http:
+      paths:
+      - path: /curl-a-joke
+        backend:
+          serviceName: curl-a-joke
+          servicePort: 8080
