--- a/curl-a-joke-all.yaml
+++ b/curl-a-joke-all.yaml
@@ -1,3 +1,9 @@
+apiVersion: v1
+kind: ConfigMap
+metadata: 
+  name: curl-a-joke-config
+data:
+  PORT: "8080"
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata: 
@@ -17,11 +23,16 @@ spec:
       containers: 
       - name: curl-a-joke
         image: dvdmuckle/curl-a-joke:armhf
+        env:
+          - name: PORT
+            valueFrom:
+              configMapKeyRef:
+                name: curl-a-joke-config
+                key: PORT
         ports: 
         -  containerPort: 8080
            protocol: TCP
----
-apiVersion: extensions/v1beta1
+apiVersion: v1
 kind: Ingress
 metadata:
   name: curl-a-joke
@@ -33,7 +44,6 @@ spec:
         backend:
           serviceName: curl-a-joke
           servicePort: 8080
----
 kind: Service
 apiVersion: v1
 metadata: 
