--- a/curl-a-joke-all.yaml
+++ b/curl-a-joke-all.yaml
@@ -23,7 +23,7 @@ spec:
     spec: 
       containers: 
       - name: curl-a-joke
-        image: dvdmuckle/curl-a-joke
+        image: dvdmuckle/curl-a-joke:arm
         env:
           - name: PORT
             valueFrom:
