Change image val

--- a/curl-a-joke.yaml
+++ b/curl-a-joke.yaml
@@ -23,7 +23,7 @@ spec:
     spec: 
       containers: 
       - name: curl-a-joke
-        image: dvdmuckle/curl-a-joke
+        image: dvdmuckle/curl-a-joke:armhf
         args: ["-jokesdb", "/root/db/jokes.db"]
         volumeMounts:
                 - mountPath: "/root/db"
